--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     @@for(i=0; i<=10; i++) {
         <div>for 예제asdasdas</div>
     }
+    <div>asasd</div>
 </div>
 @@include('./include/footer.html')
 
